; ModuleID = '/home/carl/AnghaBench/sway/sway/extr_ipc-json.c_ipc_json_create_rect.c'
source_filename = "/home/carl/AnghaBench/sway/sway/extr_ipc-json.c_ipc_json_create_rect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wlr_box = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [2 x i8] c"x\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"y\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"width\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"height\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.wlr_box*)* @ipc_json_create_rect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ipc_json_create_rect(%struct.wlr_box* %0) #0 {
  %2 = alloca %struct.wlr_box*, align 8
  %3 = alloca i32*, align 8
  store %struct.wlr_box* %0, %struct.wlr_box** %2, align 8
  %4 = call i32* (...) @json_object_new_object()
  store i32* %4, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load %struct.wlr_box*, %struct.wlr_box** %2, align 8
  %7 = getelementptr inbounds %struct.wlr_box, %struct.wlr_box* %6, i32 0, i32 3
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @json_object_new_int(i32 %8)
  %10 = call i32 @json_object_object_add(i32* %5, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load i32*, i32** %3, align 8
  %12 = load %struct.wlr_box*, %struct.wlr_box** %2, align 8
  %13 = getelementptr inbounds %struct.wlr_box, %struct.wlr_box* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @json_object_new_int(i32 %14)
  %16 = call i32 @json_object_object_add(i32* %11, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 %15)
  %17 = load i32*, i32** %3, align 8
  %18 = load %struct.wlr_box*, %struct.wlr_box** %2, align 8
  %19 = getelementptr inbounds %struct.wlr_box, %struct.wlr_box* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @json_object_new_int(i32 %20)
  %22 = call i32 @json_object_object_add(i32* %17, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i32 %21)
  %23 = load i32*, i32** %3, align 8
  %24 = load %struct.wlr_box*, %struct.wlr_box** %2, align 8
  %25 = getelementptr inbounds %struct.wlr_box, %struct.wlr_box* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @json_object_new_int(i32 %26)
  %28 = call i32 @json_object_object_add(i32* %23, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i32 %27)
  %29 = load i32*, i32** %3, align 8
  ret i32* %29
}

declare dso_local i32* @json_object_new_object(...) #1

declare dso_local i32 @json_object_object_add(i32*, i8*, i32) #1

declare dso_local i32 @json_object_new_int(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
